# DDInteract

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_OVERVIEW.md  README.md  REPORT_PLAN.md  dvc.yaml  instructions.md  pyproject.toml  requirements.txt  run.md
.dvc/: config
.github/workflows/: ci-cd.yaml
config/: config.yaml
config/features/: default.yaml
config/training/: default.yaml
data/: .gitignore  DDI Database.json  raw_ddi.csv.dvc
src/: api.py  config.py  drift.py  export_model.py  features.py  fetch_smiles.py  logger.py  models.py  train.py
src/static/: index.html
tests/: test_api.py  test_chemistry.py  test_drift.py  test_export_model.py  test_features.py  test_fetch_smiles.py  test_integration_drift.py  test_integration_features_model.py  test_logger.py  test_model.py  test_models.py  test_train.py
