[project]
name = "pfa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pubchempy>=1.0.5",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "rdkit>=2026.3.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
