[project]
name = "pfa"
version = "0.1.0"
description = "DDI Severity Predictor — MLOps pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "evidently>=0.7.21",
    "fastapi>=0.136.3",
    "joblib>=1.2.0",
    "loguru>=0.7.0",
    "matplotlib>=3.5.0",
    "mlflow>=3.13.0",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pre-commit>=4.6.0",
    "pubchempy>=1.0.5",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-discovery>=1.4.0",
    "rdkit>=2026.3.2",
    "ruff>=0.5.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.10.0",
    "uvicorn>=0.49.0",
    "xgboost>=2.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/*.py" = ["N806", "N803"]
"tests/*.py" = ["N806"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.features"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "src.train"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "src.export_model"
disable_error_code = ["call-overload", "index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:numpy.core is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest-cov>=7.1.0",
]
